--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.8",
     "@react-oauth/google": "^0.12.1",
@@ -16,15 +17,20 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "framer-motion": "^10.16.16",
+    "jwt-decode": "^4.0.0",
     "logrocket": "^7.0.0",
+    "mdb-react-ui-kit": "^7.0.0",
+    "mdbreact": "^5.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-calendar": "^4.7.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
     "redux": "^5.0.0",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
