--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "date-fns": "^3.2.0",
     "framer-motion": "^10.16.16",
     "jwt-decode": "^4.0.0",
     "logrocket": "^7.0.0",
@@ -24,6 +25,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-calendar": "^4.7.0",
+    "react-datepicker": "^4.25.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-responsive": "^9.0.2",
