--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
+    "reconnecting-websocket": "^4.4.0",
     "redux": "^5.0.0",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.4",
